# faiss

./: CLAUDE.md
contrib/iowarp/: .gitignore  CMakeLists.txt  DESIGN_AND_SOLUTION.md  IMPLEMENTATION_PLAN.md  IOWarpInvertedLists.cpp  IOWarpInvertedLists.h  README.md  UPSTREAM_PROPOSAL_IOWARP.md  bench_ivf_qps.cpp  cte_client.cpp  cte_client.h  cte_smoke.cpp  ivf_cte_ingest.cpp  ivf_cte_ingest.h  ivf_to_iowarp.cpp  report.tex
contrib/iowarp/chimod/: CMakeLists.txt  clio_mod.yaml
contrib/iowarp/chimod/include/clio_runtime/faiss_ivf/: faiss_ivf_client.h  faiss_ivf_runtime.h  faiss_ivf_tasks.h
contrib/iowarp/chimod/include/clio_runtime/faiss_ivf/autogen/: faiss_ivf_methods.h
contrib/iowarp/chimod/src/: faiss_ivf_client.cc  faiss_ivf_runtime.cc
contrib/iowarp/chimod/src/autogen/: faiss_ivf_lib_exec.cc
contrib/iowarp/config/: ares_cte.yaml  local_smoke.yaml
contrib/iowarp/results/: RESULTS.md  ares_cte_rendered_20260714_103514.yaml  ares_cte_rendered_20260719_103304.yaml  ares_cte_rendered_20260719_110446.yaml  ares_cte_rendered_20260719_120157.yaml  meminfo_ondisk_nb100M_chimod_20260713_165538.txt  meminfo_ondisk_nb10M_chimod_20260713_112537.txt  meminfo_ondisk_nb10M_chimod_20260713_163147.txt  meminfo_ondisk_nb10M_chimod_20260713_165030.txt  meminfo_ondisk_nb10M_chimod_20260714_103513.txt  meminfo_ondisk_nb10M_chimod_20260719_103304.txt  meminfo_ondisk_nb10M_chimod_20260719_110446.txt  meminfo_ondisk_nb10M_iowarp_20260713_112318.txt  meminfo_ondisk_nb10M_iowarp_20260713_155848.txt  meminfo_ondisk_nb10M_iowarp_20260713_162932.txt  meminfo_ondisk_nb10M_mmap_20260719_110422.txt  meminfo_ondisk_nb50M_chimod_20260713_163541.txt  meminfo_ondisk_nb50M_chimod_20260713_165121.txt  meminfo_ondisk_nb50M_chimod_20260714_104338.txt  meminfo_ondisk_nb50M_chimod_20260719_103304.txt  meminfo_ondisk_nb50M_chimod_20260719_105021.txt  meminfo_ondisk_nb50M_chimod_20260719_110547.txt  meminfo_ondisk_nb50M_chimod_20260719_115334.txt  meminfo_ondisk_nb50M_chimod_20260719_120157.txt  meminfo_ondisk_nb50M_mmap_20260719_110401.txt  meminfo_ondisk_step3_nb178M_chimod_20260713_170459.txt  meminfo_ondisk_step3_nb44M_chimod_20260713_170208.txt  qps_ondisk_nb100M.csv  qps_ondisk_nb10M.csv  qps_ondisk_nb50M.csv  qps_ondisk_step3_nb178M.csv  qps_ondisk_step3_nb44M.csv  telemetry_ondisk_nb100M_21908.csv  telemetry_ondisk_nb100M_21919.csv  telemetry_ondisk_nb10M_21917.csv  telemetry_ondisk_nb10M_22065.csv  telemetry_ondisk_nb10M_22069.csv  telemetry_ondisk_nb50M_21918.csv  telemetry_ondisk_nb50M_22066.csv  telemetry_ondisk_nb50M_22067.csv  (+5 more)
contrib/iowarp/results/logs/: 21849_qps.out  21859_qps.out  21884_qps.out  21889_qps.out  21894_qps.out  21895_qps.out  21899_qps.out  21903_qps.out  21904_qps.out  21905_qps.out  21908_qps.out  21909_qps.out  21910_qps.out  21917_qps.out  21918_qps.out  21919_qps.out  22065_qps.out  22066_qps.out  22067_qps.out  22068_qps.out  22069_qps.out  22071_qps.out  22072_qps.out
contrib/iowarp/scripts/: 00_env_ares.sh  20_ingest_cte.sh  30_run_bench.sh  40_plot_qps.py  sbatch_bench.sh  telemetry_sampler.py
iowarp/: IMPLEMENTATION_PLAN.md
